--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,21 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+header{
+	display:flex;
+}
+nav.container{
+	display: flex;
+	width: 80%;
+}
+
+nav a{
+	width: 20%;
+	color: gray;
+
+}
+
+header img{
+	display:inline-block;
+	width: 18%;
+}
