finished middle img

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -76,7 +76,7 @@ nav a{
 	margin-top: 10px;
 	width: 20%;
 	color: gray;
-
+	text-align: center;
 }
 
 header img{
@@ -89,6 +89,7 @@ header img{
 	justify-content: flex-end;
 	align-items: center;
 	margin-top: 35px;
+	margin-bottom: 50px;
 }
 
 .left-square{
@@ -114,4 +115,23 @@ img.tricky-pic{
 	display: inline-block;
 	width: 40%;
 	margin-right: 50px;
+}
+
+.border-top{
+	border-top: 1px solid black;
+	display:flex;
+	justify-content: space-around;
+	margin: 20px 0;
+	font-size: 20px;
+}
+
+section.border-top div{
+	display:inline-block;
+	width: 40%;
+	margin: 15px 0;
+}
+
+.middle-img{
+	display:block;
+	width: 100%;
 }
