finished rewriting index.html using flexbox

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -135,3 +135,27 @@ section.border-top div{
 	display:block;
 	width: 100%;
 }
+
+.border-bottom{
+	border-bottom: 1px solid black;
+	display:flex;
+	justify-content: space-around;
+	margin: 20px 0;
+	font-size: 20px;
+}
+
+section.border-bottom div{
+	display:inline-block;
+	width: 30%;
+	margin: 20px 0;
+}
+
+footer{
+	font-size: 20px;
+}
+footer p{
+	margin-top:10px;
+}
+.copyright{
+	text-align: center;
+}
